modify pom file

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
 
     <groupId>top.kou.will</groupId>
     <artifactId>will-core</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>will-core</name>
+    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
